<resources>
    <string name="app_name">V-jet Task</string>

    <!--Facebook-->
    <string name="facebook_app_id">1771063339844418</string>
    <string name="fb_profile_pic_url">https://graph.facebook.com/</string>
    <string name="fb_profile_pic_type">/picture?type=large</string>

    <!--Twitter-->
    <string name="twitter_profile_pic_type">_normal</string>

    <!--Vkontakte-->
    <integer name="com_vk_sdk_AppId">5585455</integer>

    <!--SocNetworkAccountActivity-->
    <string name="name">Имя:</string>
    <string name="email">Эл. почта:</string>
    <string name="b_date">Дата рождения:</string>
    <string name="empty_value">---</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="btn_post">POST</string>

    <!--MainActivity-->
    <string name="btn_gallery">GALLERY</string>

    <!--Posts-->
    <string name="post">Test post from V-jet Task</string>
    <string name="link_for_post">https://developers.google.com/</string>

</resources>
